# serrano-plugin-gpu

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deb.yml  pull_request.yml
src/: gemm.cu  gemm.h  minmax.cu  minmax.h  vaccel.c
